--- a/package.json
+++ b/package.json
@@ -1,34 +1,36 @@
 {
-  "name": "smart-model",
-  "version": "1.0.18",
+  "name": "smart-model-for-sqlcipher",
+  "version": "1.0.0",
   "description": "a smart model middleware",
   "main": "index.js",
   "bin": {
-    "smart-model": "bin/smart-model.js"
+    "smart-model": "bin/smart-model-sqlcipher.js"
   },
   "scripts": {
     "test": "mocha"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rayanywhere/smart-model.git"
+    "url": "git+https://github.com/qw623577789/smart-model-for-sqlcipher.git"
   },
   "keywords": [
     "smart",
     "model",
-    "middleware"
+    "middleware",
+    "sqlcipher"
   ],
-  "author": "ray",
+  "author": "ray&skip",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/rayanywhere/smart-model/issues"
+    "url": "https://github.com/qw623577789/smart-model-for-sqlcipher/issues"
   },
-  "homepage": "https://github.com/rayanywhere/smart-model#readme",
+  "homepage": "https://github.com/qw623577789/smart-model-for-sqlcipher#readme",
   "dependencies": {
     "ajv": "^5.2.3",
     "fs-extra": "^4.0.2",
     "klaw-sync": "^3.0.0",
     "mysql": "^2.15.0",
-    "opts": "^1.2.6"
+    "opts": "^1.2.6",
+    "sqlcipher": "^1.1.1"
   }
 }
