--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "smart-model-for-sqlcipher",
-  "version": "1.0.7",
+  "version": "1.0.9",
   "description": "a smart model middleware",
   "main": "index.js",
   "scripts": {
@@ -27,6 +27,7 @@
     "fs-extra": "^4.0.2",
     "klaw-sync": "^3.0.0",
     "opts": "^1.2.6",
-    "sqlcipher": "^1.1.1"
+    "sqlcipher": "^1.1.1",
+    "sqlstring": "^2.3.0"
   }
 }
